# solana-privacy-hackathon-2026

./: .gitignore  Cargo.toml  README.md
circuits/: .gitignore  README.md  biome.jsonc  eslint.config.js  package.json  tsconfig.json
circuits/circom/: nullifier-batch-16.circom  nullifier-batch-4.circom  nullifier-batch-64.circom  nullifier-non-membership-4.circom  transaction-16.circom  transaction-2.circom  transaction-4.circom  transaction.circom
circuits/circom/lib/: constants.circom  field-comparators.circom  indexed-merkle-tree.circom  keys.circom  merkle.circom  notes.circom  nullifier-tree.circom  one-hot.circom  rewards.circom
crates/zorb-pool-interface/: Cargo.toml
crates/zorb-pool-interface/src/: asset_ids.rs  authority.rs  cpi.rs  error.rs  lib.rs  program_ids.rs  types.rs
crates/zorb-program-ids/: Cargo.toml
crates/zorb-program-ids/src/: lib.rs
docs/: CIRCUIT_ROUTING.md  YIELD_MECHANISM.md
programs/shielded-pool/: Cargo.toml  README.md  build.rs
programs/shielded-pool/idl/devnet/: shielded_pool.json
programs/shielded-pool/idl/mainnet/: shielded_pool.json
programs/shielded-pool/src/: account_loaders.rs  errors.rs  groth16.rs  indexed_merkle_tree.rs  lib.rs  merkle_tree.rs  pda.rs  pool_cpi.rs  token.rs  utils.rs  validation.rs  vault_cpi.rs  verifying_keys.rs
programs/shielded-pool/src/events/: authority_transfer_completed.rs  authority_transfer_initiated.rs  deposit_escrow_closed.rs  deposit_escrow_created.rs  mod.rs  new_commitment.rs  new_nullifier.rs  new_receipt.rs  nullifier_batch_inserted.rs  nullifier_earliest_epoch_advanced.rs  nullifier_epoch_advanced.rs  nullifier_epoch_root_closed.rs  nullifier_leaf_inserted.rs  nullifier_pda_closed.rs  pool_config_active_changed.rs  pool_initialized.rs  pool_paused.rs  pool_registered.rs
programs/shielded-pool/src/instructions/: mod.rs  types.rs
programs/shielded-pool/src/instructions/admin/: accept_authority.rs  initialize.rs  mod.rs  register_token_pool.rs  register_unified_sol_pool.rs  set_pool_config_active.rs  set_pool_paused.rs  transfer_authority.rs
programs/shielded-pool/src/instructions/deposit_escrow/: close_deposit_escrow.rs  init_deposit_escrow.rs  mod.rs
programs/shielded-pool/src/instructions/nullifier_tree/: advance_earliest_provable_epoch.rs  advance_nullifier_epoch.rs  close_inserted_nullifier.rs  close_nullifier_epoch_root.rs  mod.rs  nullifier_batch_insert.rs
programs/shielded-pool/src/instructions/transact/: CONSTRAINTS.md  close_transact_session.rs  init_transact_session.rs  mod.rs  session_data.rs  upload_transact_chunk.rs
programs/shielded-pool/src/instructions/transact/execute_transact/: accounts.rs  deposit_escrow.rs  fee.rs  mod.rs  nullifier.rs  pool_config.rs  public_slots.rs  slot_validation.rs  tree_updates.rs  validators.rs
programs/shielded-pool/src/instructions/util/: log.rs  mod.rs  poseidon_hash.rs
programs/shielded-pool/src/state/: commitment.rs  commitment_tree.rs  deposit_escrow.rs  global_config.rs  mod.rs  nullifier.rs  nullifier_epoch_root.rs  nullifier_tree.rs  pool_config.rs  pool_traits.rs  receipt_tree.rs  transact_session.rs
programs/shielded-pool/tests/: authority.rs  initialize.rs  log.rs  nullifier_tree.rs  poseidon_hash.rs  session.rs
programs/shielded-pool/tests/common/: mock_accounts.rs  mod.rs  pda.rs  setup.rs
programs/shielded-pool/tests/common/instructions/: admin.rs  mod.rs  token_config.rs  transact.rs  unified_sol.rs
programs/token-pool/: Cargo.toml  README.md
programs/token-pool/docs/: vault-invariant-proof.md
programs/token-pool/idl/: token_pool.json
programs/token-pool/idl/devnet/: token_pool.json
programs/token-pool/idl/mainnet/: token_pool.json
programs/token-pool/src/: errors.rs  lib.rs  pda.rs  state.rs
programs/token-pool/src/events/: mod.rs
programs/token-pool/src/instructions/: deposit.rs  finalize_rewards.rs  fund_rewards.rs  log.rs  mod.rs  sweep_excess.rs  withdraw.rs
programs/token-pool/src/instructions/admin/: accept_authority.rs  init_pool.rs  mod.rs  set_fee_rates.rs  set_pool_active.rs  transfer_authority.rs
programs/token-pool/tests/: admin.rs  authority.rs  epoch.rs  finalize_rewards.rs  fund_rewards.rs  init_pool.rs  integration_test.rs  pool_operations.rs
programs/token-pool/tests/common/: instructions.rs  mock_accounts.rs  mod.rs  pda.rs  setup.rs
programs/unified-sol-pool/: Cargo.toml  README.md
programs/unified-sol-pool/idl/devnet/: unified_sol_pool.json
programs/unified-sol-pool/idl/mainnet/: unified_sol_pool.json
programs/unified-sol-pool/src/: errors.rs  lib.rs  pda.rs  state.rs  utils.rs
programs/unified-sol-pool/src/events/: mod.rs
programs/unified-sol-pool/src/instructions/: deposit.rs  finalize_unified_rewards.rs  harvest_lst_appreciation.rs  log.rs  mod.rs  withdraw.rs
programs/unified-sol-pool/src/instructions/admin/: accept_authority.rs  init_lst_config.rs  init_unified_sol_pool_config.rs  mod.rs  set_lst_config_active.rs  set_unified_sol_pool_config_active.rs  set_unified_sol_pool_config_fee_rates.rs  transfer_authority.rs
programs/unified-sol-pool/tests/: admin.rs  appreciation.rs  authority.rs  epoch.rs  harvest.rs  init_config.rs  integration_test.rs  invariants.rs
programs/unified-sol-pool/tests/common/: instructions.rs  mock_accounts.rs  mod.rs  pda.rs  setup.rs
