[package]
name = "zorb-pool-interface"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Shared interface types for Zorb pool programs"

[features]
default = ["mainnet"]
# Network-specific program IDs
# Note: localnet uses mainnet addresses for local development
mainnet = ["zorb-program-ids/mainnet"]
devnet = ["zorb-program-ids/devnet"]
localnet = ["zorb-program-ids/localnet"]
# Enable this for programs that need to invoke pool CPIs
cpi = []
# Enable this for off-chain code (clients, tests)
client = ["dep:solana-program"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
pinocchio = { version = "0.9.2", default-features = false }
pinocchio-pubkey = { version = "0.3.0" }
five8_const = "0.1"
zorb-program-ids = { path = "../zorb-program-ids" }

# Optional: for client-side code
solana-program = { version = "2.0", optional = true }

[lints]
workspace = true
