[package]
name = "unified-sol-pool"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Unified SOL pool program for Zorb privacy system - handles LST deposits and withdrawals with exchange rate conversion"

[features]
default = ["mainnet"]
bpf = []
# Disable entrypoint when used as a library dependency
no-entrypoint = []
test-utils = []
# Enable IDL generation
idl-build = ["dep:panchor-idl", "panchor/idl-build", "dep:serde_json"]
# Network-specific builds
mainnet = ["zorb-program-ids/mainnet", "zorb-pool-interface/mainnet"]
devnet = ["zorb-program-ids/devnet", "zorb-pool-interface/devnet"]
localnet = ["zorb-program-ids/localnet", "zorb-pool-interface/localnet"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
pinocchio = { version = "0.9.2", default-features = false }
pinocchio-pubkey = { workspace = true }
pinocchio-token = "0.4.0"
pinocchio-system = "0.3.0"
zorb-program-ids = { workspace = true }
zorb-pool-interface = { path = "../../crates/zorb-pool-interface" }
const-crypto = "0.1.0"

# Panchor framework (from mines workspace)
panchor = { workspace = true }
panchor-idl = { workspace = true, optional = true }
pinocchio-contrib = { workspace = true }
pinocchio-log = "0.5.1"
num_enum = { workspace = true }
serde_json = { workspace = true, optional = true }
strum = { workspace = true }

[dev-dependencies]
borsh = "1.5"
litesvm = "0.6"
solana-sdk = "2.0"
five8_const = "0.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
